# homework10.1

./: .gitignore  README.md  pyproject.toml  widget.py
src/: decorators.py  external_api.py  generators.py  masks.py  mylog.txt  processing.py  translater.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_exrernal_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
